force-app/main/default/objects/DocGen_Guest_Render__e/DocGen_Guest_Render__e.object-meta.xml
<CustomObject>
    <description
    >Deprecated. Was used to route guest-context PDF rendering through Automated Process; the guest render path has been removed from Portwood. No publishers or subscribers remain. Retained for upgrade compatibility.</description>
    <label>Portwood Guest Render</label>
    <pluralLabel>Portwood Guest Renders</pluralLabel>
</CustomObject>