force-app/main/default/objects/DocGen_Guest_Render__e/fields/Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Job_Id__c</fullName>
    <description
    >The DocGen_Job__c Id used to track render status and surface the result CV Id back to the LWC.</description>
    <label>Job Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>