force-app/main/default/objects/DocGen_Guest_Render__e/fields/Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Template_Id__c</fullName>
    <description>DocGen_Template__c Id to render.</description>
    <label>Template Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>